<resources>
    <string name="bangla_popup2">Ý</string>
    <string name="bangla_popup3">È</string>
    <string name="bangla_popup4">Ð</string>
    <string name="bangla_popup5">Æ</string>
    <string name="bangla_popup6">Á</string>
    <string name="bangla_popup7">Ã</string>
    <string name="bangla_popup8">Ä</string>
    <string name="bangla_popup9">¾</string>
    <string name="bangla_popup0">Ü</string>
    <string name="bangla_popup_unijoy_r">ÛÖ</string>
    <string name="bangla_popup_unijoy_s">Ø×</string>
    <string name="bangla_popup_unijoy_m">×à</string>
    <string name="probhat_popup_y">òÔì</string>
    <string name="probhat_popup_z">òì</string>
    <string name="probhat_popup_r">îíÛ</string>
    <string name="probhat_popup_rh">îí</string>
    <string name="probhat_popup_e">Ä¸</string>
    <string name="probhat_popup_u">Þ´</string>
    <string name="bangla_1">¤</string>
    <string name="bangla_2">¥</string>
    <string name="bangla_3">¦</string>
    <string name="bangla_4">§</string>
    <string name="bangla_5">¨</string>
    <string name="bangla_6">ª</string>
    <string name="bangla_7">«</string>
    <string name="bangla_8">¬</string>
    <string name="bangla_9">¯</string>
    <string name="bangla_0">¡</string>
    <string name="bangla_shoro_o">±</string>
    <string name="bangla_shoro_a">ð</string>
    <string name="bangla_rossho_i">²</string>
    <string name="bangla_dirgo_i">³</string>
    <string name="bangla_rossho_u">´</string>
    <string name="bangla_dirgo_u">µ</string>
    <string name="bangla_rossho_ri">¶</string>
    <string name="bangla_e">·</string>
    <string name="bangla_oi">¸</string>
    <string name="bangla_oo">¹</string>
    <string name="bangla_ou">º</string>
    <string name="bangla_k">»</string>
    <string name="bangla_kh">¼</string>
    <string name="bangla_g">½</string>
    <string name="bangla_gh">¾</string>
    <string name="bangla_unga">¿</string>
    <string name="bangla_c">À</string>
    <string name="bangla_ch">Á</string>
    <string name="bangla_j">Â</string>
    <string name="bangla_jh">Ã</string>
    <string name="bangla_iyo">Ä</string>
    <string name="bangla_t">Å</string>
    <string name="bangla_tho">Æ</string>
    <string name="bangla_do">Ç</string>
    <string name="bangla_dho">È</string>
    <string name="bangla_murdonno">É</string>
    <string name="bangla_tto">Ê</string>
    <string name="bangla_ttho">Ë</string>
    <string name="bangla_ddo">Ì</string>
    <string name="bangla_ddho">Í</string>
    <string name="bangla_dontonno">Î</string>
    <string name="bangla_p">Ï</string>
    <string name="bangla_f">Ð</string>
    <string name="bangla_b">Ñ</string>
    <string name="bangla_v">Ò</string>
    <string name="bangla_m">Ó</string>
    <string name="bangla_z">Ô</string>
    <string name="bangla_ontosthoro">Õ</string>
    <string name="bangla_l">Ö</string>
    <string name="bangla_sh">×</string>
    <string name="bangla_ssh">Ø</string>
    <string name="bangla_s">Ù</string>
    <string name="bangla_h">Ú</string>
    <string name="bangla_dashinnoro">Û</string>
    <string name="bangla_dushinnaro">Ü</string>
    <string name="bangla_y">Ý</string>
    <string name="bangla_khondoto">Þ</string>
    <string name="bangla_onushar">ß</string>
    <string name="bangla_bishorgo">à</string>
    <string name="bangla_chondrobindu">á</string>
    <string name="bangla_a_kar">â</string>
    <string name="bangla_rossho_i_kar">ã</string>
    <string name="bangla_dirgo_i_kar">ä</string>
    <string name="bangla_dari">å</string>
    <string name="bangla_rossho_u_kar">æ</string>
    <string name="bangla_dirgo_u_kar">ç</string>
    <string name="bangla_rri_kar">è</string>
    <string name="bangla_e_kar">é</string>
    <string name="bangla_oi_kar">ê</string>
    <string name="bangla_o_kar">ï</string>
    <string name="bangla_ou_kar">ë</string>
    <string name="bangla_zofola">ì</string>
    <string name="bangla_ref">í</string>
    <string name="bangla_rofola">î</string>
    <string name="bangla_hoshonto">ñ</string>
    <string name="bangla_rozofola">ò</string>
    <string name="alternates_for_h">+</string>
    <string name="alternates_for_s">\#</string>
    <string name="alternates_for_j">=</string>
    <string name="alternates_for_x">\"</string>
    <string name="alternates_for_q">1</string>
    <string name="alternates_for_w">2</string>
    <string name="alternates_for_d">&amp;</string>
    <string name="alternates_for_f">*</string>
    <string name="alternates_for_r">4</string>
    <string name="alternates_for_t">5</string>
    <string name="alternates_for_z">_</string>
    <string name="alternates_for_l">)</string>
    <string name="alternates_for_k">(</string>
    <string name="alternates_for_g">-</string>
    <string name="alternates_for_m">/</string>
    <string name="alternates_for_n">;</string>
    <string name="alternates_for_p">0</string>
    <string name="alternates_for_b">:</string>
    <string name="alternates_for_v">"'"</string>
    <string name="alternates_for_ae" />
    <string name="alternates_for_oe" />
    <string name="alternates_for_cyrillic_e" />
    <string name="alternates_for_cyrillic_soft_sign" />
    <string name="alternates_for_a_umlaut" />
    <string name="alternates_for_o_umlaut" />
    <string name="word_separators">".\u0009 ,;:!?
()[]*&amp;@{}/&lt;>_+=|\"।"</string>
    <string name="sentence_separators">.,!?)।</string>
    <string name="suggested_punctuations">"!!?,\"'।:;()-/@_"</string>
    <string name="settings_key_mode_auto">0</string>
    <string name="settings_key_mode_always_show">1</string>
    <string name="settings_key_mode_always_hide">2</string>
    <string name="app_id">348425335273623</string>
    <string name="cut_copy_paste">Cut Copy Paste Feature</string>
    <string name="cut_copy_paste_summary">Long press on X, C, V for cut, copy, paste</string>
    <string name="contact_suggestion">Contact Suggestion</string>
    <string name="contact_suggestion_summary">show suggestion from your contact names</string>
    <string name="english_ime_name">Ridmik Board</string>
    <string name="hardware_ime_name">Ridmik HardKeys</string>
    <string name="english_ime_settings">Ridmik Board Settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="obey_haptic_feedback">Obey haptic feedback</string>
    <string name="obey_haptic_feedback_summary">"Don't vibrate if haptic feedback is disabled in system settings"</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary" />
    <string name="long_press_delay">Long press delay</string>
    <string name="long_press_delay_summary">%d milliseconds</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="punc_sugg">Punctuation suggestion</string>
    <string name="punc_sugg_summary">Show punctuation in suggestion bar</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string name="bigram_suggestion">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string name="prediction_none">0</string>
    <string name="prediction_basic">1</string>
    <string name="prediction_full">2</string>
    <string name="added_word">%s : Saved</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key ↶ to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary</string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>"Touch &amp; hold a key to view accents
(ø, ö, ô, ó, and so on)"</b>" "</string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">Voice input only works in English.</string>
    <string name="voice_warning_how_to_turn_off">Ready?</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_working">Working</string>
    <string name="voice_initializing" />
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_network_error">"Couldn't connect"</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_swipe_hint"><b>Hint:</b> Swipe across keyboard to speak</string>
</resources>