<?xml version="1.0" encoding="utf-8"?>
<Keyboard android:keyWidth="10.000002%p" android:keyHeight="@dimen/key_height" android:horizontalGap="0.0px" android:verticalGap="@dimen/key_bottom_gap" xmlns:android="http://schemas.android.com/apk/res-auto">
    <Row android:rowEdgeFlags="top">
        <Key android:codes="@integer/unicode_unga" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_onushar" android:keyEdgeFlags="left" android:keyLabel="@string/bangla_unga" />
        <Key android:codes="@integer/unicode_z" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup2" android:keyLabel="@string/bangla_z" />
        <Key android:codes="@integer/unicode_do" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup3" android:keyLabel="@string/bangla_do" />
        <Key android:codes="@integer/unicode_p" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup4" android:keyLabel="@string/bangla_p" />
        <Key android:codes="@integer/unicode_t" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup5" android:keyLabel="@string/bangla_t" />
        <Key android:codes="@integer/unicode_c" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup6" android:keyLabel="@string/bangla_c" />
        <Key android:codes="@integer/unicode_j" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup7" android:keyLabel="@string/bangla_j" />
        <Key android:codes="@integer/unicode_h" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup8" android:keyLabel="@string/bangla_h" />
        <Key android:codes="@integer/unicode_g" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup9" android:keyLabel="@string/bangla_g" />
        <Key android:codes="@integer/unicode_dashinnoro" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_popup0" android:keyEdgeFlags="right" android:keyLabel="@string/bangla_dashinnoro" />
    </Row>
    <Row>
        <Key android:horizontalGap="4.999995%p" android:codes="@integer/unicode_rri_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_oi" android:keyEdgeFlags="left" android:keyLabel="@string/bangla_rri_kar" />
        <Key android:codes="@integer/unicode_rossho_u_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_rossho_u" android:keyLabel="@string/bangla_rossho_u_kar" />
        <Key android:codes="@integer/unicode_rossho_i_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_rossho_i" android:keyLabel="@string/bangla_rossho_i_kar" />
        <Key android:codes="@integer/unicode_b" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_v" android:keyLabel="@string/bangla_b" />
        <Key android:codes="@integer/unicode_hoshonto" android:keyLabel="@string/bangla_hoshonto" />
        <Key android:codes="@integer/unicode_a_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_shoro_a" android:keyLabel="@string/bangla_a_kar" />
        <Key android:codes="@integer/unicode_k" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_kh" android:keyLabel="@string/bangla_k" />
        <Key android:codes="@integer/unicode_tto" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_khondoto" android:keyLabel="@string/bangla_tto" />
        <Key android:codes="@integer/unicode_ddo" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_ddho" android:keyEdgeFlags="right" android:keyLabel="@string/bangla_ddo" />
    </Row>
    <Row>
        <Key android:keyWidth="14.999998%p" android:codes="@integer/fixed_bangla_shifted" android:keyEdgeFlags="left" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_shift" android:keyIcon="@drawable/sym_keyboard_shift" />
        <Key android:codes="@integer/unicode_chondrobindu" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_bishorgo" android:keyLabel="@string/bangla_chondrobindu" />
        <Key android:codes="@integer/unicode_o_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_oo" android:keyLabel="@string/bangla_o_kar" />
        <Key android:codes="@integer/unicode_e_kar" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_e" android:keyLabel="@string/bangla_e_kar" />
        <Key android:codes="@integer/unicode_ontosthoro" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_l" android:keyLabel="@string/bangla_ontosthoro" />
        <Key android:codes="@integer/unicode_dontonno" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_murdonno" android:keyLabel="@string/bangla_dontonno" />
        <Key android:codes="@integer/unicode_s" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_ssh" android:keyLabel="@string/bangla_s" />
        <Key android:codes="@integer/unicode_m" android:popupKeyboard="@xml/kbd_popup_template" android:popupCharacters="@string/bangla_sh" android:keyLabel="@string/bangla_m" />
        <Key android:keyWidth="14.999998%p" android:codes="@integer/key_delete" android:keyEdgeFlags="right" android:isModifier="true" android:isRepeatable="true" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyIcon="@drawable/sym_keyboard_delete" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_normal">
        <Key android:keyWidth="15.000000%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:keyWidth="10.000000%p" android:codes="@integer/key_f1" android:isModifier="true" />
		<Key android:keyWidth="10.0%p" android:codes="@integer/smiley_keyboard1" android:isModifier="true" android:keyIcon="@drawable/happy2" />
        <Key android:keyWidth="35.0%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:keyWidth="10.000004%p" android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_url">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_email">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_im">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_webentry">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_normal_with_settings_key">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_url_with_settings_key">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_email_with_settings_key">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_im_with_settings_key">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row android:rowEdgeFlags="bottom" android:keyboardMode="@id/mode_webentry_with_settings_key">
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_symbol" android:keyEdgeFlags="left" android:isModifier="true" android:keyLabel="@string/label_symbol_key" />
        <Key android:codes="@integer/key_f1" android:isModifier="true" />
        <Key android:keyWidth="39.999996%p" android:codes="@integer/key_space" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_space" android:keyIcon="@drawable/sym_keyboard_space" />
        <Key android:codes="@integer/unicode_dari" android:popupKeyboard="@xml/popup_punctuation" android:isModifier="true" android:keyLabel="@string/bangla_dari" android:keyIcon="@drawable/hint_popup" />
        <Key android:keyWidth="20.000004%p" android:codes="@integer/key_return" android:keyEdgeFlags="right" android:isModifier="true" android:iconPreview="@drawable/sym_keyboard_feedback_return" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
</Keyboard>